bugfix z-index

--- a/src/ui/ReactDatePicker.scss
+++ b/src/ui/ReactDatePicker.scss
@@ -1,6 +1,6 @@
 .react-datepicker-popper {
     padding-top: 0;
-    z-index: 99999;
+    z-index: 99999 !important;
 }
 .react-datepicker {
     box-shadow: 0 2px 10px 0 rgb(0 0 0 / 6%);
